harden: enable helmet, strict CORS allowlist, disable x-powered-by; switch frontend to explicit backend-origin; add LIVE Stripe IDs via env; production hardening

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Backend origin: set this to http://localhost:3000 when running server locally or to your tunnel URL -->
-    <meta name="backend-origin" content="https://luxury-nyx-435279624261.us-central1.run.app">
+    <meta name="backend-origin" content="http://localhost:3000">
     <link rel="stylesheet" href="frontend/css/styles.css">
     <title>🔥 OFERTA LIMITADA - Luxury NYX - 80% OFF</title>
 </head>
